--- a/santiago_papeleria_frontend/src/app/app.html
+++ b/santiago_papeleria_frontend/src/app/app.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 
-<router-outlet></router-outlet>
+<main class="pt-[82px] md:pt-[135px] min-h-[calc(100vh-400px)]">
+    <router-outlet></router-outlet>
+</main>
 
 <app-footer></app-footer>
