--- a/santiago_papeleria_frontend/src/app/pages/login/login.html
+++ b/santiago_papeleria_frontend/src/app/pages/login/login.html
@@ -63,7 +63,7 @@
 
           <!-- Submit Button -->
           <button type="submit" [disabled]="isLoading"
-            class="w-full bg-brand-blue text-white py-3 rounded-xl hover:bg-brand-blue-dark transition-colors flex justify-center items-center">
+            class="w-full bg-brand-yellow text-brand-blue-dark py-3 rounded-xl hover:bg-yellow-500 transition-colors flex justify-center items-center font-medium">
             <ng-container *ngIf="!isLoading">
               <i class="ri-login-circle-line mr-2"></i> Iniciar Sesión
             </ng-container>
@@ -87,12 +87,6 @@
             class="w-full flex items-center justify-center px-4 py-3 border border-gray-300 rounded-xl text-gray-700 bg-white hover:bg-gray-50 transition">
             <i class="ri-google-fill text-red-500 mr-3"></i>
             Continuar con Google
-          </button>
-
-          <button
-            class="w-full flex items-center justify-center px-4 py-3 border border-gray-300 rounded-xl text-gray-700 bg-white hover:bg-gray-50 transition">
-            <i class="ri-facebook-fill text-blue-600 mr-3"></i>
-            Continuar con Facebook
           </button>
         </div>
 
