--- a/santiago_papeleria_frontend/src/app/pages/product/components/price-summary/price-summary.html
+++ b/santiago_papeleria_frontend/src/app/pages/product/components/price-summary/price-summary.html
@@ -5,7 +5,7 @@
     </div>
     <div class="flex justify-between items-center">
         <span class="text-gray-600">Total ({{ quantity }} unidades):</span>
-        <span class="text-2xl font-bold text-[#104D73]">${{ totalPrice.toFixed(2) }}</span>
+        <span class="text-5xl font-extrabold text-[#104D73] tracking-tighter">${{ totalPrice.toFixed(2) }}</span>
     </div>
     <div *ngIf="savings > 0" class="text-sm text-green-600 mt-2">
         ¡Ahorras ${{ savings.toFixed(2) }} con este descuento!
