--- a/santiago_papeleria_frontend/src/app/shared/layouts/main-layout/main-layout.component.html
+++ b/santiago_papeleria_frontend/src/app/shared/layouts/main-layout/main-layout.component.html
@@ -1,7 +1,8 @@
 <app-header></app-header>
 
-<main class="pt-[82px] md:pt-[135px] min-h-[calc(100vh-400px)]">
+<main class="pt-[160px] md:pt-[180px] min-h-[calc(100vh-400px)]">
     <router-outlet></router-outlet>
 </main>
 
 <app-footer></app-footer>
+<app-cart-sidebar></app-cart-sidebar>
